# drone

./: Cargo.toml  Dockerfile  Procfile  README.md
frontend/: .gitignore  README.md  config.json  nuxt.config.js  package-lock.json  package.json
frontend/components/: Footer.vue  Header.vue  Map.vue
frontend/pages/: index.vue
src/: lib.rs  main.rs
src/author/: announce.rs  mod.rs
static/: 404.html  index.html
