[package]
name = "drone"
version = "0.1.0"
authors = ["huhn511 <huhn@einfachIOTA.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"
actix-cors = "0.2.0"

futures = "0.3.1"
env_logger = "0.7"
bytes = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
